Fix z-index

--- a/documentation/style.css
+++ b/documentation/style.css
@@ -549,7 +549,7 @@ body.docs-page {
   position: relative;
   width: 100%;
   max-width: 560px;
-  z-index: 100;
+  z-index: 1;
 }
 
 .subpage-search .search-input-wrapper {
